graphchan_frontend/check_output_final.txt
warning: `/Users/max/.cargo/config` is deprecated in favor of `config.toml`
note: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
    Checking graphchan_frontend v0.1.0 (/Users/max/Code/OrbWeaver/graphchan_frontend)
error[E0449]: visibility qualifiers are not permitted here
   --> graphchan_frontend/src/app/mod.rs:399:5
    |
399 |     pub fn render_file_attachment(
    |     ^^^ help: remove the qualifier
    |
    = note: trait items always share the visibility of their trait

error[E0407]: method `render_file_attachment` is not a member of trait `eframe::App`
   --> graphchan_frontend/src/app/mod.rs:399:5
    |
399 | /     pub fn render_file_attachment(
400 | |         &mut self,
401 | |         ui: &mut egui::Ui,
402 | |         file: &crate::models::FileResponse,
...   |
431 | |     }
    | |_____^ not a member of trait `eframe::App`

error[E0599]: no method named `render_file_attachment` found for mutable reference `&mut GraphchanApp` in the current scope
   --> graphchan_frontend/src/app/ui/thread.rs:213:50
    |
213 | ...                   self.render_file_attachment(ui, file, &api_base);
    |                            ^^^^^^^^^^^^^^^^^^^^^^ method not found in `&mut GraphchanApp`

error[E0599]: no method named `fit_to_exact_size` found for struct `eframe::egui::Response` in the current scope
   --> graphchan_frontend/src/app/mod.rs:415:39
    |
415 |                     ui.image(texture).fit_to_exact_size(size * scale);
    |                                       ^^^^^^^^^^^^^^^^^ method not found in `eframe::egui::Response`

error[E0609]: no field `name` on type `&FileResponse`
   --> graphchan_frontend/src/app/mod.rs:426:56
    |
426 |                 ui.label(format!("File: {} ({})", file.name.as_deref().unwrap_or("unnamed"), mime));
    |                                                        ^^^^ unknown field
    |
    = note: available fields are: `id`, `post_id`, `original_name`, `mime`, `size_bytes` ... and 6 others

error[E0609]: no field `name` on type `&FileResponse`
   --> graphchan_frontend/src/app/mod.rs:429:47
    |
429 |             ui.label(format!("File: {}", file.name.as_deref().unwrap_or("unnamed")));
    |                                               ^^^^ unknown field
    |
    = note: available fields are: `id`, `post_id`, `original_name`, `mime`, `size_bytes` ... and 6 others

error[E0499]: cannot borrow `*app` as mutable more than once at a time
  --> graphchan_frontend/src/app/ui/drawer.rs:60:17
   |
17 |             let state = &mut app.identity_state;
   |                         ----------------------- first mutable borrow occurs here
...
60 |                 app.spawn_load_identity();
   |                 ^^^ second mutable borrow occurs here
...
69 |             let path_clone = state.avatar_path.clone();
   |                              ----------------- first borrow later used here

warning: unused variable: `scale`
  --> graphchan_frontend/src/app/ui/graph.rs:77:82
   |
77 | fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], scale: f32, thread_id: &str, repulsion_force: f32) {
   |                                                                                  ^^^^^
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
help: if this is intentional, prefix it with an underscore
   |
77 | fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], _scale: f32, thread_id: &str, repulsion_force: f32) {
   |                                                                                  +
help: you might have meant to pattern match on the similarly named constant `TOP_MARGIN`
   |
77 - fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], scale: f32, thread_id: &str, repulsion_force: f32) {
77 + fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], app::ui::chronological::TOP_MARGIN: f32, thread_id: &str, repulsion_force: f32) {
   |

warning: unused variable: `state`
   --> graphchan_frontend/src/app/ui/graph.rs:520:42
    |
520 | fn render_node_header(ui: &mut egui::Ui, state: &mut ThreadState, post: &PostView, zoom: f32) {
    |                                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

warning: unused variable: `go_back`
   --> graphchan_frontend/src/app/mod.rs:312:17
    |
312 |         let mut go_back = false;
    |                 ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_go_back`

warning: variable does not need to be mutable
   --> graphchan_frontend/src/app/mod.rs:312:13
    |
312 |         let mut go_back = false;
    |             ----^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0407, E0449, E0499, E0599, E0609.
For more information about an error, try `rustc --explain E0407`.
warning: `graphchan_frontend` (lib) generated 4 warnings
error: could not compile `graphchan_frontend` (lib) due to 7 previous errors; 4 warnings emitted
